--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ vendorUrl = https://99x.io
 xpVersion = 7.9.2
 
 # Settings for publishing to a Maven repo
-group = io.99x.imageshop
+group = io.99x
