--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Gradle Project settings
 projectName = imageshop
-version = 2.0.6
+version = 2.0.6.sp
 
 # XP App values
 appDisplayName = ImageShop
