[IIMAGE-11] refactor: standardize Imageshop branding across the application
- Update all instances of "ImageShop" to "Imageshop" in:
  - README.md
  - gradle.properties
  - UI components (iimage.html, iimage.xml)
  - Application description
  - i18n phrases
  - JavaScript modules
  - Site configuration files
- Update SVG icon with new design

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ projectName = imageshop
 version = 2.0.6
 
 # XP App values
-appDisplayName = ImageShop
+appDisplayName = Imageshop
 appName = io.99x.imageshop
 vendorName = 99x
 vendorUrl = https://99x.io
